# epanet-turbo

./: .gitignore  CHANGELOG.md  CMakeLists.txt  DEVELOPER_GUIDE.md  LICENSE  OUTPUT_FORMAT.md  README.md  RELEASE_NOTES_v2.0.md  RELEASE_NOTES_v2.1.0.md  RELEASE_NOTES_v2.3.0.md  build_encrypted.py  colab_linux_m5.ipynb  final_verify.txt  make_release.py  prepare_release_bundle.py  pyproject.toml  requirements.txt  setup_and_demo.py  src_verify.txt  verify_protocol_v2.py
.agent/workflows/: release_epanet_turbo.md
dev_tools/: force_clean.py  make_release.py  prepare_release_bundle.py  verify_v2_colab.ipynb
dev_tools/legacy_scripts/: flatten_package.py  release_packager.py  verify_telemetry.py
epanet_turbo/: .gitkeep  __init__.py  cache.py  context.py  engine.py  parser.py  streaming.py  telemetry.py
epanet_turbo/epanet_turbo/: __init__.py  context.py  engine.py  parser.py  streaming.py  telemetry.py
epanet_turbo/epanet_turbo/pyarmor_runtime_000000/: __init__.py
epanet_turbo/pyarmor_runtime_000000/: __init__.py  pyarmor_runtime.pyd
examples/: Net1.inp  demo_adapter.py  quickstart.py  turbo_adapter.py  verification_result.txt
include/: epanet_bulk.h  epanet_turbo.h  epanet_turbo_export.h
private_src/: __init__.py  engine.py  parser.py  telemetry.py
pyarmor_runtime_000000/: __init__.py
resources/dll/: libepanet2.dylib  test.py
src/: epanet_bulk.c  epanet_turbo.c  epanet_turbo.h  hydraul.c  hydsolver.c  types.h
src/outfile/include/: epanet_output_export.h
test_streaming_out_small/: test_time_rules.meta.json
test_temp/: test.py
tests/: benchmark.py  test_consistency.py
